exports[`test childClasses adjusts for float 1`] = `"hard one-whole interior_9nddxf scrollable floating__item"`;

exports[`test childClasses appends additional childClasses 1`] = `"hard one-whole interior_9nddxf scrollable one two inline-block locked-top"`;

exports[`test childClasses returns default 1`] = `"hard one-whole interior_9nddxf scrollable inline-block locked-top"`;

exports[`test does not render if no component 1`] = `<div />`;

exports[`test does not render if not visible 1`] = `<div />`;

exports[`test layoutClasses appends additional classes 1`] = `"hard flush one two background--light-primary"`;

exports[`test layoutClasses appends layout overrides 1`] = `"hard flush side-panel_x7puo background--light-primary three four"`;

exports[`test layoutClasses handles float 1`] = `"hard flush side-panel_x7puo background--light-primary floating"`;

exports[`test layoutClasses handles offset 1`] = `"hard flush side-panel_x7puo background--light-primary offset_b736ty"`;

exports[`test layoutClasses has dark version 1`] = `"hard flush side-panel_x7puo background--dark-primary"`;

exports[`test layoutClasses returns default 1`] = `"hard flush side-panel_x7puo background--light-primary"`;

exports[`test overrides with theme 1`] = `
<div className="panel overlay--solid-dark fixed" data-side-modal={true} id="@@modal" onClick={[Function]} style={{...}}>
<VelocityComponent animation={{...}} duration={300} runOnMount={true} targetQuerySelector={{...}}>
<section className="mytheme" style={{...}}>
<div className="hard one-whole interior_9nddxf scrollable inline-block locked-top" style={{...}}>
<component />
</div>
</section>
</VelocityComponent>
</div>
`;

exports[`test renders with props 1`] = `
<div className="panel overlay--solid-dark fixed" data-side-modal={true} id="@@modal" onClick={[Function]} style={{...}}>
<VelocityComponent animation={{...}} duration={300} runOnMount={true} targetQuerySelector={{...}}>
<section className="hard flush side-panel_x7puo background--light-primary" style={{...}}>
<div className="hard one-whole interior_9nddxf scrollable inline-block locked-top" style={{...}}>
<component />
</div>
</section>
</VelocityComponent>
</div>
`;

exports[`test styles accounts for coverHeader 1`] = `
Object {
  "opacity": 0,
  "top": "0px",
  "transform": "translateY(-20px)",
}
`;

exports[`test styles returns styles if styles 1`] = `
Object {
  "color": "red",
  "opacity": 0,
  "top": "46px",
  "transform": "translateY(-20px)",
}
`;

exports[`test updates styles with mobile styles 1`] = `
<div className="panel overlay--solid-dark fixed" data-side-modal={true} id="@@modal" onClick={[Function]} style={{...}}>
<VelocityComponent animation={{...}} duration={300} runOnMount={true} targetQuerySelector={{...}}>
<section className="hard flush side-panel_x7puo background--light-primary" style={{...}}>
<div className="hard one-whole interior_9nddxf scrollable inline-block locked-top" style={{...}}>
<component />
</div>
</section>
</VelocityComponent>
</div>
`;

exports[`test updates styles with non mobile styles 1`] = `
<div className="panel overlay--solid-dark fixed" data-side-modal={true} id="@@modal" onClick={[Function]} style={{...}}>
<VelocityComponent animation={{...}} duration={300} runOnMount={true} targetQuerySelector={{...}}>
<section className="hard flush side-panel_x7puo background--light-primary" style={{...}}>
<div className="hard one-whole interior_9nddxf scrollable inline-block locked-top" style={{...}}>
<component />
</div>
</section>
</VelocityComponent>
</div>
`;
